Bug 477799 - Color picker effect is broken
Summary: Color picker effect is broken
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, regression, wayland-only
Depends on:
Blocks:
 
Reported: 2023-11-30 21:09 UTC by Leia
Modified: 2023-12-05 18:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leia 2023-11-30 21:09:56 UTC
SUMMARY

STEPS TO REPRODUCE
1. Try to pick a color from the screen with anything that uses the color picker effect (like the plasma color picker widget or a color chooser in an app, for example spectacle editing tools)

OBSERVED RESULT
It picks a color with brightness 0 and wrong hue and saturation values, resulting on #000000 hex color

EXPECTED RESULT
It should pick the selected color below the mouse pointer

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.1.64-1-lts (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Maybe a separated bug unrelated to kwin but the pick color button doesn't show up in the kcolorchooser app, but does show up on apps that have a color picker
Comment 1 Bug Janitor Service 2023-12-05 12:45:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4745
Comment 2 Zamundaaa 2023-12-05 18:39:58 UTC
Git commit 7c8036efefa9337660280a7bfc221cb17ff1f8b1 by Xaver Hugl.
Committed on 05/12/2023 at 19:28.
Pushed by zamundaaa into branch 'master'.

core/colorspace: fix mapTo method and support PQ with it

M  +44   -12   src/core/colorspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/7c8036efefa9337660280a7bfc221cb17ff1f8b1