core/colorspace: fix mapTo method and support PQ with it

BUG: 477799